--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "symfony-bundle",
     "license": "MIT",
     "version": "1.0.0",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "homepage": "https://github.com/amare53/helper-bundle",
     "autoload-dev": {
         "psr-4": {
             "App\\Tests\\": "Tests/"
@@ -32,9 +33,10 @@
         "symfony/password-hasher": "6.0.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "10.0.x-dev",
-        "symfony/browser-kit": "6.0.x-dev",
-        "symfony/css-selector": "6.0.x-dev",
-        "symfony/phpunit-bridge": "6.0.x-dev"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
