--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
     ],
     "require": {
         "php": "^8.0",
-        "doctrine/orm": "2.9",
+        "doctrine/orm": "2.9.*",
         "symfony/framework-bundle": "5.3.*",
-        "knplabs/knp-paginator-bundle": "5.6",
-        "phpdocumentor/reflection-docblock": "5.2",
+        "knplabs/knp-paginator-bundle": "5.6.*",
+        "phpdocumentor/reflection-docblock": "5.2.*",
         "symfony/property-access": "5.3.*",
         "symfony/serializer": "5.3.*",
         "symfony/validator": "6.0.x-dev",
