--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "amare53/helper-bundle",
     "type": "symfony-bundle",
     "license": "MIT",
-    "version": "1.0.0",
     "minimum-stability": "dev",
     "homepage": "https://github.com/amare53/helper-bundle",
     "autoload-dev": {
@@ -36,7 +35,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.0.0-dev"
         }
     }
 }
