--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "amare53/helper-bundle",
     "type": "symfony-bundle",
     "license": "MIT",
-    "minimum-stability": "dev",
     "homepage": "https://github.com/amare53/helper-bundle",
     "autoload-dev": {
         "psr-4": {
@@ -28,14 +27,14 @@
         "phpdocumentor/reflection-docblock": "5.2.*",
         "symfony/property-access": "5.3.*",
         "symfony/serializer": "5.3.*",
-        "symfony/validator": "6.0.x-dev",
-        "symfony/password-hasher": "6.0.x-dev"
+        "symfony/validator": "6.0.x",
+        "symfony/password-hasher": "6.0.x"
     },
     "require-dev": {
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.0-dev"
+            "dev-master": "1.0.0"
         }
     }
 }
