--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
         "phpdocumentor/reflection-docblock": "5.2.*",
         "symfony/property-access": "5.3.*",
         "symfony/serializer": "5.3.*",
-        "symfony/validator": "6.0.x",
-        "symfony/password-hasher": "6.0.x"
+        "symfony/validator": "6.0.*",
+        "symfony/password-hasher": "6.0.*"
     },
     "require-dev": {
     },
